tests/paczka1/fuzzy1/92161172.err
Error in line 2: NPnl A764 1,3
Error in line 4: FeIUA4Y A764 43,7
Error in line 7: NPnl A744 94,0
Error in line 28: fRO A744 35,7
Error in line 27: NPnl S517 0,3
Error in line 32: NPnl A764 82,9
